# supervoxel-for-3d-point-clouds

./: .gitmodules  CMakeLists.txt  Metrics.h  README.md  main.cc
.devcontainer/: Dockerfile  devcontainer.json
src/base/: algorithm.h  log.h  message.h  object_pool.h
src/geometry/: point_octree.h
src/geometry/io/: xyz_io.h
src/geometry/kernel/: circle_2d.h  line_2d.h  line_3d.h  plane_3d.h  point_2d.h  point_3d.h  point_nd.h  polygon_2d.h  segment_2d.h  segment_3d.h  sphere_3d.h  triangle_2d.h  triangle_3d.h
src/geometry/point_cloud/: grid_sample.h  pca_estimate_normals.h  supervoxel_segmentation.h
src/geometry/transform/: project_3d.h
src/geometry/util/: center_2d.h  center_3d.h  compare_2d.h  compare_3d.h  distance_3d.h
src/math/: angle.h  matrix.h  vector.h
src/math/matrix/: matrix.h  matrix_util.h  symmetric_eigen.h  triplet_matrix.h
src/math/matrix/decompose/: tridiagonal_decompose.h
src/math/vector/: vector.h  vector_2d.h  vector_3d.h
src/statistics/: principal_component_analysis_2d.h  principal_component_analysis_3d.h
src/statistics/kernel/: covariance.h  deviation.h  ranking.h
src/statistics/regression/: linear_least_squares_fitting.h
src/util/array/: array_2d.h
src/util/metric/: angular.h  cosine.h  euclidean.h  jaccard.h  manhattan.h  squared_euclidean.h
src/util/set/: disjoint_set.h
src/util/tree/: kd_tree.h  octree.h
src/visualization/color/: rgb32_color.h
vccs/: vccs_knn_supervoxel.h
vcss/: vccs_knn_supervoxel.h  vccs_supervoxel.h
